var searchData=
[
  ['tablestruct_5fortools_5f2fconstraint_5f5fsolver_5f2fassignment_5f2eproto_2526',['TableStruct_ortools_2fconstraint_5fsolver_2fassignment_2eproto',['../struct_table_struct__ortools__2fconstraint__5fsolver__2fassignment__2eproto.html',1,'']]],
  ['tablestruct_5fortools_5f2fconstraint_5f5fsolver_5f2fdemon_5f5fprofiler_5f2eproto_2527',['TableStruct_ortools_2fconstraint_5fsolver_2fdemon_5fprofiler_2eproto',['../struct_table_struct__ortools__2fconstraint__5fsolver__2fdemon__5fprofiler__2eproto.html',1,'']]],
  ['tablestruct_5fortools_5f2fconstraint_5f5fsolver_5f2frouting_5f5fenums_5f2eproto_2528',['TableStruct_ortools_2fconstraint_5fsolver_2frouting_5fenums_2eproto',['../struct_table_struct__ortools__2fconstraint__5fsolver__2frouting__5fenums__2eproto.html',1,'']]],
  ['tablestruct_5fortools_5f2fconstraint_5f5fsolver_5f2frouting_5f5fparameters_5f2eproto_2529',['TableStruct_ortools_2fconstraint_5fsolver_2frouting_5fparameters_2eproto',['../struct_table_struct__ortools__2fconstraint__5fsolver__2frouting__5fparameters__2eproto.html',1,'']]],
  ['tablestruct_5fortools_5f2fconstraint_5f5fsolver_5f2fsearch_5f5flimit_5f2eproto_2530',['TableStruct_ortools_2fconstraint_5fsolver_2fsearch_5flimit_2eproto',['../struct_table_struct__ortools__2fconstraint__5fsolver__2fsearch__5flimit__2eproto.html',1,'']]],
  ['tablestruct_5fortools_5f2fconstraint_5f5fsolver_5f2fsolver_5f5fparameters_5f2eproto_2531',['TableStruct_ortools_2fconstraint_5fsolver_2fsolver_5fparameters_2eproto',['../struct_table_struct__ortools__2fconstraint__5fsolver__2fsolver__5fparameters__2eproto.html',1,'']]],
  ['tabu_5fsearch_2532',['TABU_SEARCH',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a6770ffaed7cb75bb4d8a29dfb1c4630b',1,'operations_research::PROTOBUF_FINAL']]],
  ['target_5fvar_2533',['target_var',['../classoperations__research_1_1_cast_constraint.html#a238836497bd5aa00b0d74d3ba2a1dc03',1,'operations_research::CastConstraint']]],
  ['target_5fvar_5f_2534',['target_var_',['../classoperations__research_1_1_cast_constraint.html#a98fcd7d6529aa105a5d9ca4b282579f0',1,'operations_research::CastConstraint']]],
  ['tasks_2535',['Tasks',['../structoperations__research_1_1_disjunctive_propagator_1_1_tasks.html',1,'operations_research::DisjunctivePropagator']]],
  ['time_2536',['time',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a2112b3fc2e505a8289e2fc65d42a06b7',1,'operations_research::PROTOBUF_FINAL::time()'],['../structoperations__research_1_1_solution_collector_1_1_solution_data.html#a13421db7d7e84fff732599bcf954c5cc',1,'operations_research::SolutionCollector::SolutionData::time()']]],
  ['time_5fcumuls_2537',['time_cumuls',['../classoperations__research_1_1_disjunctive_constraint.html#a0801da3f8ae5f253399fd1319dea7e57',1,'operations_research::DisjunctiveConstraint']]],
  ['time_5flimit_2538',['time_limit',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a88923e64e498d7185ac7a4ba3d9c0dc6',1,'operations_research::PROTOBUF_FINAL']]],
  ['time_5fslacks_2539',['time_slacks',['../classoperations__research_1_1_disjunctive_constraint.html#af106a0b38e8b3d069248a579efe2e1bc',1,'operations_research::DisjunctiveConstraint']]],
  ['tmp_5fvector_5f_2540',['tmp_vector_',['../classoperations__research_1_1_solver.html#a0f3d534acf3ba2602ae56ec4f28ccdd6',1,'operations_research::Solver']]],
  ['toint64vector_2541',['ToInt64Vector',['../namespaceoperations__research.html#aad4e1b406f0e56c83283747b038df88a',1,'operations_research']]],
  ['top_2542',['Top',['../classoperations__research_1_1_model_parser.html#ae8ac172436c62100ddbd16a7422e1501',1,'operations_research::ModelParser']]],
  ['topperiodiccheck_2543',['TopPeriodicCheck',['../classoperations__research_1_1_solver.html#a4de855c905df4a729715972dc39997a4',1,'operations_research::Solver']]],
  ['topprogresspercent_2544',['TopProgressPercent',['../classoperations__research_1_1_solver.html#ab003619f8e2f35a1ca01aa7713c674ea',1,'operations_research::Solver']]],
  ['trace_5fpropagation_2545',['trace_propagation',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a39f2224ce3e6c3c38e6834834dd5e189',1,'operations_research::PROTOBUF_FINAL']]],
  ['trace_5fsearch_2546',['trace_search',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a00115ea31abc519b53890b1ad57dcb11',1,'operations_research::PROTOBUF_FINAL']]],
  ['trace_5fvar_2547',['TRACE_VAR',['../namespaceoperations__research.html#a403e52e933033645c3388146d5e2edd2af2d15b703802d6a1f8f402f90de90dc6',1,'operations_research']]],
  ['trail_5fblock_5fsize_2548',['trail_block_size',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a20b42f11095629895f313a96c3a4b444',1,'operations_research::PROTOBUF_FINAL']]],
  ['trailcompression_2549',['TrailCompression',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a81d641d769fd303cd83ef13ffd547e41',1,'operations_research::PROTOBUF_FINAL']]],
  ['trailcompression_5farraysize_2550',['TrailCompression_ARRAYSIZE',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a7952e68a73131456455c9999406ecc01',1,'operations_research::PROTOBUF_FINAL']]],
  ['trailcompression_5fdescriptor_2551',['TrailCompression_descriptor',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a12620d46abd3c2aa2a6cc2abd2379b93',1,'operations_research::PROTOBUF_FINAL']]],
  ['trailcompression_5fisvalid_2552',['TrailCompression_IsValid',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a702a84dcd87cafde291d1b83060f302a',1,'operations_research::PROTOBUF_FINAL']]],
  ['trailcompression_5fmax_2553',['TrailCompression_MAX',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#ada877cfa6ce0e361b258e6fe18172f9a',1,'operations_research::PROTOBUF_FINAL']]],
  ['trailcompression_5fmin_2554',['TrailCompression_MIN',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#ac1b27c473db980b4105262ce019dc37b',1,'operations_research::PROTOBUF_FINAL']]],
  ['trailcompression_5fname_2555',['TrailCompression_Name',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#adffc06d8aedddc77a3f535900a930abe',1,'operations_research::PROTOBUF_FINAL']]],
  ['trailcompression_5fparse_2556',['TrailCompression_Parse',['../classoperations__research_1_1_p_r_o_t_o_b_u_f___f_i_n_a_l.html#a05ac50b755f159686a8392f1c857514e',1,'operations_research::PROTOBUF_FINAL']]],
  ['transit_2557',['transit',['../structoperations__research_1_1_routing_model_1_1_state_dependent_transit.html#aa62eca1f13335c62c6eadad531f06247',1,'operations_research::RoutingModel::StateDependentTransit']]],
  ['transit_5fevaluator_2558',['transit_evaluator',['../classoperations__research_1_1_routing_dimension.html#aae1962408e06dbb45f6e5ee67e530880',1,'operations_research::RoutingDimension']]],
  ['transit_5fevaluator_5fclass_2559',['transit_evaluator_class',['../structoperations__research_1_1_routing_model_1_1_cost_class_1_1_dimension_cost.html#a251a1028d938f5eb8605f759e6dc966f',1,'operations_research::RoutingModel::CostClass::DimensionCost']]],
  ['transit_5fplus_5fidentity_2560',['transit_plus_identity',['../structoperations__research_1_1_routing_model_1_1_state_dependent_transit.html#ab71e287979b5c9040d1596d12ed3bb5f',1,'operations_research::RoutingModel::StateDependentTransit']]],
  ['transitcallback_2561',['TransitCallback',['../classoperations__research_1_1_routing_model.html#ad558398f8c75f81d879f74d18ba5e7c3',1,'operations_research::RoutingModel']]],
  ['transitcallback1_2562',['TransitCallback1',['../classoperations__research_1_1_routing_model.html#a204041e5264282d54dfd198011e776d3',1,'operations_research::RoutingModel']]],
  ['transitcallback2_2563',['TransitCallback2',['../classoperations__research_1_1_routing_model.html#a5fa8aee5b0c67072dbbb03f1899ec60a',1,'operations_research::RoutingModel']]],
  ['transition_5ftime_5f_2564',['transition_time_',['../classoperations__research_1_1_disjunctive_constraint.html#afc37bcfd26805cab838cef7ae4c87444',1,'operations_research::DisjunctiveConstraint']]],
  ['transitiontime_2565',['TransitionTime',['../classoperations__research_1_1_disjunctive_constraint.html#aaafd3363e871db52ce00c08905f57afa',1,'operations_research::DisjunctiveConstraint']]],
  ['transits_2566',['transits',['../classoperations__research_1_1_routing_dimension.html#a6f170c2c3b2a0c5f616aa449a38d84fa',1,'operations_research::RoutingDimension']]],
  ['transitvar_2567',['TransitVar',['../classoperations__research_1_1_routing_dimension.html#abad8b7edc9f675056db28171da1da655',1,'operations_research::RoutingDimension']]],
  ['travelbounds_2568',['TravelBounds',['../structoperations__research_1_1_travel_bounds.html',1,'operations_research']]],
  ['try_2569',['Try',['../classoperations__research_1_1_solver.html#a5add678db16084b765a8c93a257528dc',1,'operations_research::Solver::Try(DecisionBuilder *const db1, DecisionBuilder *const db2)'],['../classoperations__research_1_1_solver.html#ad7f594a8946220061e18840c7e4583e3',1,'operations_research::Solver::Try(DecisionBuilder *const db1, DecisionBuilder *const db2, DecisionBuilder *const db3)'],['../classoperations__research_1_1_solver.html#a9074fd1071b1db18fa299cf223c8a796',1,'operations_research::Solver::Try(DecisionBuilder *const db1, DecisionBuilder *const db2, DecisionBuilder *const db3, DecisionBuilder *const db4)'],['../classoperations__research_1_1_solver.html#a6d65aaa36cb1f2ead5ab8bd1242e1806',1,'operations_research::Solver::Try(const std::vector&lt; DecisionBuilder * &gt; &amp;dbs)']]],
  ['tsplns_2570',['TSPLNS',['../classoperations__research_1_1_solver.html#afd2868244e1a645aaf41eb8a6a6c8bf4af23b5d9059cb973667272b793cfd37b1',1,'operations_research::Solver']]],
  ['tspopt_2571',['TSPOPT',['../classoperations__research_1_1_solver.html#afd2868244e1a645aaf41eb8a6a6c8bf4a092684b466c2d8f6dffcc4fcc45a4c87',1,'operations_research::Solver']]],
  ['twoopt_2572',['TWOOPT',['../classoperations__research_1_1_solver.html#a6fc60ae040ae35c83f09736d2e682a18a6235329fc45bc5a7612cc84342b2528e',1,'operations_research::Solver']]],
  ['type_2573',['Type',['../structoperations__research_1_1_routing_model_1_1_vehicle_type_container.html#acf6083fc320b50822c395a662729074b',1,'operations_research::RoutingModel::VehicleTypeContainer::Type()'],['../classoperations__research_1_1_vehicle_type_curator.html#acf6083fc320b50822c395a662729074b',1,'operations_research::VehicleTypeCurator::Type()']]],
  ['type_5fadded_5fto_5fvehicle_2574',['TYPE_ADDED_TO_VEHICLE',['../classoperations__research_1_1_routing_model.html#a495b53b94a8c31a8f13755962d6c6059a0c6d4521dc67c6bc22dc917caef2286a',1,'operations_research::RoutingModel']]],
  ['type_5findex_5fof_5fvehicle_2575',['type_index_of_vehicle',['../structoperations__research_1_1_routing_model_1_1_vehicle_type_container.html#a9608c6da44ffbf91a3d1ca2c5d873bc7',1,'operations_research::RoutingModel::VehicleTypeContainer']]],
  ['type_5fon_5fvehicle_5fup_5fto_5fvisit_2576',['TYPE_ON_VEHICLE_UP_TO_VISIT',['../classoperations__research_1_1_routing_model.html#a495b53b94a8c31a8f13755962d6c6059a7fc0cab89681d70bbb68958ed70b85c1',1,'operations_research::RoutingModel']]],
  ['type_5fsimultaneously_5fadded_5fand_5fremoved_2577',['TYPE_SIMULTANEOUSLY_ADDED_AND_REMOVED',['../classoperations__research_1_1_routing_model.html#a495b53b94a8c31a8f13755962d6c6059ad86e8082b5636a532fe181b288a4dea7',1,'operations_research::RoutingModel']]],
  ['typecurrentlyonroute_2578',['TypeCurrentlyOnRoute',['../classoperations__research_1_1_type_regulations_checker.html#ae8ea938d5980cf2079ded7ea1dcd38e7',1,'operations_research::TypeRegulationsChecker']]],
  ['typeincompatibilitychecker_2579',['TypeIncompatibilityChecker',['../classoperations__research_1_1_type_incompatibility_checker.html',1,'TypeIncompatibilityChecker'],['../classoperations__research_1_1_type_incompatibility_checker.html#a0e62f00f807fac1ac7e9d14e00fb8394',1,'operations_research::TypeIncompatibilityChecker::TypeIncompatibilityChecker()']]],
  ['typename_2580',['TypeName',['../classoperations__research_1_1_argument_holder.html#ad72c30a24555a3ffb0dba3749dfad22f',1,'operations_research::ArgumentHolder']]],
  ['typeoccursonroute_2581',['TypeOccursOnRoute',['../classoperations__research_1_1_type_regulations_checker.html#afcb22d4d3273e1f4153f851e1bddf417',1,'operations_research::TypeRegulationsChecker']]],
  ['typepolicyoccurrence_2582',['TypePolicyOccurrence',['../structoperations__research_1_1_type_regulations_checker_1_1_type_policy_occurrence.html',1,'operations_research::TypeRegulationsChecker']]],
  ['typeregulationschecker_2583',['TypeRegulationsChecker',['../classoperations__research_1_1_type_regulations_checker.html',1,'TypeRegulationsChecker'],['../classoperations__research_1_1_type_regulations_checker.html#a7745da6edcf25f61956a75b5bb3a7080',1,'operations_research::TypeRegulationsChecker::TypeRegulationsChecker()']]],
  ['typeregulationsconstraint_2584',['TypeRegulationsConstraint',['../classoperations__research_1_1_type_regulations_constraint.html',1,'TypeRegulationsConstraint'],['../classoperations__research_1_1_type_regulations_constraint.html#ac45256999b51546027c5f81897ee4b46',1,'operations_research::TypeRegulationsConstraint::TypeRegulationsConstraint()']]],
  ['typerequirementchecker_2585',['TypeRequirementChecker',['../classoperations__research_1_1_type_requirement_checker.html',1,'TypeRequirementChecker'],['../classoperations__research_1_1_type_requirement_checker.html#aa61667d3933f65282eaabd3fb06d4416',1,'operations_research::TypeRequirementChecker::TypeRequirementChecker()']]]
];
